hphp/hack/test/typecheck/array/disallow_varray_where_dict_like_array_is_required.php.exp
File "disallow_varray_where_dict_like_array_is_required.php", line 4, characters 10-23:
Invalid return type (Typing[4110])
  File "disallow_varray_where_dict_like_array_is_required.php", line 3, characters 18-39:
  Expected `dict<string, string>`
  File "disallow_varray_where_dict_like_array_is_required.php", line 4, characters 10-23:
  But got `vec<string>`
